# spline

./: MPC_Controller.py  OptiEmbe_Final.py  OptiEmbe_Velocity.py  OptiTrain_Light.py  SpGen_Local.py  bezier_model.pth  dataset_local_bezier.npz  dataset_velocity_constrained.npz  stats_light.npz  stats_velocity.npz  tanminhcode.py  time_model.pth
projet spline/CppVelocityProject/: CMakeLists.txt  export_weights.py
projet spline/CppVelocityProject/data/: model_weights.txt
projet spline/CppVelocityProject/include/: SimpleNN.h  VelocityController.h
